# stuff

./: .gitignore  AlignmentDeviation.lean  ContourAnalysis.lean  MAPElitesConvergence.lean  PromptInjection01_ThresholdCrossing.lean  PromptInjection02_PerturbationStability.lean  PromptInjection03_CompositionMonotonicity.lean  PromptInjection04_BasinPositiveMeasure.lean  PromptInjection05_AuthorityEscalation.lean  PromptInjection06_DefenseIncompleteness.lean  PromptInjection07_Transferability.lean  PromptInjection08_GradientFlow.lean  PromptInjection09_DimensionalityCurse.lean  PromptInjection10_TopologicalInevitability.lean  README.md  lean_build_output.txt  love_notes.py  paper2_defense_impossibility.aux  paper2_defense_impossibility.out  paper2_defense_impossibility.tex  paper2_neurips.tex  paper2_v2.tex  paper2_v3_submission.tex  proof_1_authority_thresholds.py  proof_2_ad_ceiling.py  proof_3_qd_decomposition.py  proof_4_coverage_safety_paradox.py  proof_5_morse_topology.py  research-agentic-llm-security.md  research-llm-safety-defenses.md  research-long-context-jailbreak.md  research-safety-finetuning-diminishing-returns.md  research.md
trilemma_validator/: README.md  pyproject.toml
trilemma_validator/live_runs/: README.md
trilemma_validator/live_runs/gpt35_turbo_t05/: heatmap.npy  report.md  result.json  source_archive.json
trilemma_validator/live_runs/gpt35_turbo_t05_saturated/: gp_smooth_result_centroid.json  gp_smooth_result_oblique.json
trilemma_validator/live_runs/gpt5_mini_t03/: heatmap.npy  report.md  (+2 more)
trilemma_validator/scripts/: make_paper_figure.py
(+118 files in other folders)
