[project]
name = "trilemma-validator"
version = "0.1.0"
description = "Empirical validator for the Defense Trilemma theorems on alignment-deviation heatmaps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Defense Trilemma authors" }]
keywords = ["llm-safety", "defense-trilemma", "lipschitz", "verification"]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
trilemma = "trilemma_validator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trilemma_validator"]
